src/issuer/snapshots/register:registration_ok:response.snap
---
source: src/issuer/register.rs
assertion_line: 104
expression: response
---
client_id: "[client_id]"
redirect_uris:
  - "http://localhost:3000/callback"
grant_types:
  - authorization_code
  - "urn:ietf:params:oauth:grant-type:pre-authorized_code"
response_types:
  - code
scope: openid credential
credential_offer_endpoint: "openid-credential-offer://"
