src/issuer/snapshots/token:authorized:state.snap
---
source: src/issuer/token.rs
assertion_line: 491
expression: state
---
subject_id: normal_user
stage:
  validated:
    access_token: "[access_token]"
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
    credentials:
      PHLEmployeeID:
        credential_identifier: PHLEmployeeID
        credential_configuration_id: EmployeeID_JWT
expires_at: "[expires_at]"
