src/issuer/snapshots/token:pre_authorized:response.snap
---
source: src/issuer/token.rs
assertion_line: 410
expression: "&token_resp"
---
access_token: "[access_token]"
token_type: Bearer
expires_in: 900
c_nonce: "[c_nonce]"
c_nonce_expires_in: 600
authorization_details:
  - type: openid_credential
    credential_configuration_id: EmployeeID_JWT
    credential_identifiers:
      - PHLEmployeeID
